--- a/android/app/src/main/res/drawable/splashscreen.xml
+++ b/android/app/src/main/res/drawable/splashscreen.xml
@@ -2,9 +2,9 @@
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@color/colorRed" />
     <item android:gravity="center"
-        android:height="200dp"
+        android:height="150dp"
         android:width="200dp"
         android:drawable="@drawable/logo_user"
         tools:ignore="UnusedAttribute">
