--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorRed">#fff</color>
+    <color name="colorRed">#e52527</color>
+    <!--<color name="colorRed">#ff3626</color>-->
+    <!-- <color name="colorRed">#fff</color>-->
 </resources>
